--- a/Toolbox/Win32_utilities/Win32_utilities.vcxproj.filters
+++ b/Toolbox/Win32_utilities/Win32_utilities.vcxproj.filters
@@ -192,5 +192,11 @@
     <ClCompile Include="IncludeCommand.ixx">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="TimeGraph.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="TimeGraph.ixx">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
