--- a/Toolbox/IoUtil/IoUtil.vcxproj.filters
+++ b/Toolbox/IoUtil/IoUtil.vcxproj.filters
@@ -15,10 +15,22 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="UtilityWrappers.cpp">
+    <ClCompile Include="IoUtil.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="UtilityWrappers.ixx">
+    <ClCompile Include="IoUtil.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="IoBasePeak.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="IoConstants.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="IoPixFpDim.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="IoUniform2D.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
