--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,18 +1,18 @@
-MoveWindow IDM_APPL_WINDOW -1911 1123 1495 1001
-ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_CRSR_WINDOW -326 1382 446 371
+MoveWindow IDM_APPL_WINDOW -1928 1072 1937 1049
+ShowWindow IDM_APPL_WINDOW SW_MAXIMIZE
+MoveWindow IDM_CRSR_WINDOW -326 1382 452 377
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MINI_WINDOW -295 1082 413 446
+MoveWindow IDM_MINI_WINDOW -299 1104 419 452
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MAIN_WINDOW -1903 1175 1480 920
+MoveWindow IDM_MAIN_WINDOW -1920 1124 1922 968
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_DESC_WINDOW -316 1806 446 446
+MoveWindow IDM_DESC_WINDOW -316 1806 452 452
 ShowWindow IDM_DESC_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MONITOR_WINDOW -1745 1512 440 415
+MoveWindow IDM_MONITOR_WINDOW -1745 1512 446 421
 ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_PARAM_WINDOW -736 1603 415 525
+MoveWindow IDM_PARAM_WINDOW -773 1463 421 531
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_PERF_WINDOW -312 1526 446 426
+MoveWindow IDM_PERF_WINDOW -312 1526 452 432
 ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_SIG_DESIGNER -616 1151 556 966
+MoveWindow IDM_SIG_DESIGNER -616 1151 562 972
 ShowWindow IDM_SIG_DESIGNER SW_SHOWNORMAL
