--- a/NNet/Commands/Commands.vcxproj.filters
+++ b/NNet/Commands/Commands.vcxproj.filters
@@ -228,5 +228,8 @@
     <ClCompile Include="AddModuleCommand.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SetSigGenOrigin.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
