fixed SIgGen origin / Scales

--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,18 +1,18 @@
-MoveWindow IDM_APPL_WINDOW -1928 1072 1937 1049
-ShowWindow IDM_APPL_WINDOW SW_MAXIMIZE
-MoveWindow IDM_CRSR_WINDOW -326 1382 474 399
+MoveWindow IDM_APPL_WINDOW -1861 1125 1647 857
+ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
+MoveWindow IDM_CRSR_WINDOW -661 1498 302 227
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MINI_WINDOW -299 1104 441 474
+MoveWindow IDM_MINI_WINDOW -317 1082 302 302
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MAIN_WINDOW -1920 1124 1944 990
+MoveWindow IDM_MAIN_WINDOW -1853 1177 1632 776
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_DESC_WINDOW -316 1806 474 474
+MoveWindow IDM_DESC_WINDOW -346 1514 302 302
 ShowWindow IDM_DESC_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MONITOR_WINDOW -1745 1512 468 443
-ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_PARAM_WINDOW -1083 1426 273 383
+MoveWindow IDM_MONITOR_WINDOW 200 0 137 202
+ShowWindow IDM_MONITOR_WINDOW SW_HIDE
+MoveWindow IDM_PARAM_WINDOW -594 1737 271 381
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_PERF_WINDOW -312 1526 474 454
+MoveWindow IDM_PERF_WINDOW -316 1823 302 282
 ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_SIG_DESIGNER -616 1151 584 994
+MoveWindow IDM_SIG_DESIGNER -817 1097 502 402
 ShowWindow IDM_SIG_DESIGNER SW_SHOWNORMAL
