AnimationCmd.ixx, Refactoring

--- a/NNet/Commands/Commands.vcxproj
+++ b/NNet/Commands/Commands.vcxproj
@@ -90,6 +90,7 @@
     <ClCompile Include="AddMicroSensorCmd.ixx" />
     <ClCompile Include="AddModuleCommand.ixx" />
     <ClCompile Include="AddNobsCommand.ixx" />
+    <ClCompile Include="AnimationCmd.ixx" />
     <ClCompile Include="CreateInitialNobsCmd.ixx" />
     <ClCompile Include="DeleteForkOutputCmd.ixx" />
     <ClCompile Include="DeleteNeuronInputCmd.ixx" />
