refactoring, vertical scroll range in monitor window extended

--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,18 +1,18 @@
-MoveWindow IDM_APPL_WINDOW -1966 1224 1148 882
+MoveWindow IDM_APPL_WINDOW -1908 1170 1156 890
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_CRSR_WINDOW -661 1498 356 281
+MoveWindow IDM_CRSR_WINDOW -661 1498 364 289
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MINI_WINDOW -317 1082 356 356
+MoveWindow IDM_MINI_WINDOW -317 1082 364 364
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MAIN_WINDOW -1958 1276 1133 801
+MoveWindow IDM_MAIN_WINDOW -1900 1222 1141 809
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_DESC_WINDOW -346 1514 356 356
+MoveWindow IDM_DESC_WINDOW -346 1514 364 364
 ShowWindow IDM_DESC_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MONITOR_WINDOW 200 0 191 256
-ShowWindow IDM_MONITOR_WINDOW SW_HIDE
-MoveWindow IDM_PARAM_WINDOW -594 1737 325 435
+MoveWindow IDM_MONITOR_WINDOW -1846 1583 328 443
+ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
+MoveWindow IDM_PARAM_WINDOW -594 1737 333 443
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_PERF_WINDOW -316 1823 356 336
+MoveWindow IDM_PERF_WINDOW -316 1823 364 344
 ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_SIG_DESIGNER -817 1097 556 456
+MoveWindow IDM_SIG_DESIGNER -687 1125 564 464
 ShowWindow IDM_SIG_DESIGNER SW_SHOWNORMAL
