--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,18 +1,18 @@
-MoveWindow IDM_APPL_WINDOW -1908 1170 1156 890
+MoveWindow IDM_APPL_WINDOW -1685 1169 1174 908
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_CRSR_WINDOW -661 1498 364 289
+MoveWindow IDM_CRSR_WINDOW -661 1498 382 307
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MINI_WINDOW -317 1082 364 364
+MoveWindow IDM_MINI_WINDOW -317 1082 382 382
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MAIN_WINDOW -1900 1222 1141 809
+MoveWindow IDM_MAIN_WINDOW -1677 1221 1159 827
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_DESC_WINDOW -346 1514 364 364
+MoveWindow IDM_DESC_WINDOW -346 1514 382 382
 ShowWindow IDM_DESC_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MONITOR_WINDOW -1846 1583 328 443
-ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_PARAM_WINDOW -594 1737 333 443
+MoveWindow IDM_MONITOR_WINDOW -648 1557 516 461
+ShowWindow IDM_MONITOR_WINDOW SW_HIDE
+MoveWindow IDM_PARAM_WINDOW -594 1737 351 461
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_PERF_WINDOW -316 1823 364 344
+MoveWindow IDM_PERF_WINDOW -316 1823 382 362
 ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_SIG_DESIGNER -687 1125 564 464
-ShowWindow IDM_SIG_DESIGNER SW_SHOWNORMAL
+MoveWindow IDM_SIG_DESIGNER -902 1080 582 482
+ShowWindow IDM_SIG_DESIGNER SW_HIDE
