--- a/Toolbox/Win32_utilities/Win32_utilities.vcxproj
+++ b/Toolbox/Win32_utilities/Win32_utilities.vcxproj
@@ -166,6 +166,7 @@
     <ClCompile Include="D2D_DrawContext.ixx" />
     <ClCompile Include="Commands.ixx" />
     <ClCompile Include="IncludeCommand.ixx" />
+    <ClCompile Include="ThreadPoolTimer.ixx" />
     <ClCompile Include="TimeGraph.cpp" />
     <ClCompile Include="TimeGraph.ixx" />
     <ClCompile Include="Win32_AboutBox.cpp" />
