--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,18 +1,18 @@
-MoveWindow IDM_APPL_WINDOW -2144 1214 1657 867
+MoveWindow IDM_APPL_WINDOW -1896 1402 1659 869
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_CRSR_WINDOW -416 1452 304 229
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MINI_WINDOW -329 1093 312 312
+MoveWindow IDM_MINI_WINDOW -329 1093 314 314
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MAIN_WINDOW -2136 1266 1644 788
+MoveWindow IDM_MAIN_WINDOW -1888 1454 1646 790
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_DESC_WINDOW -358 1708 312 312
+MoveWindow IDM_DESC_WINDOW -358 1708 314 314
 ShowWindow IDM_DESC_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MONITOR_WINDOW 200 0 147 212
+MoveWindow IDM_MONITOR_WINDOW 200 0 149 214
 ShowWindow IDM_MONITOR_WINDOW SW_HIDE
 MoveWindow IDM_PARAM_WINDOW -304 1682 283 383
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_PERF_WINDOW 0 0 304 284
-ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_SIG_DESIGNER -933 1514 512 412
+ShowWindow IDM_PERF_WINDOW SW_HIDE
+MoveWindow IDM_SIG_DESIGNER -933 1514 514 414
 ShowWindow IDM_SIG_DESIGNER SW_HIDE
