Refactoring, bug in UPSigGenList fixed

--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,18 +1,18 @@
-MoveWindow IDM_APPL_WINDOW -1859 1184 1422 895
+MoveWindow IDM_APPL_WINDOW -1859 1184 1432 905
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_CRSR_WINDOW -416 1452 304 229
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MINI_WINDOW -329 1093 340 340
+MoveWindow IDM_MINI_WINDOW -329 1093 350 350
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MAIN_WINDOW -1851 1236 1409 816
+MoveWindow IDM_MAIN_WINDOW -1851 1236 1419 826
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_DESC_WINDOW -358 1708 340 340
+MoveWindow IDM_DESC_WINDOW -358 1708 350 350
 ShowWindow IDM_DESC_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MONITOR_WINDOW 200 0 175 240
+MoveWindow IDM_MONITOR_WINDOW 200 0 185 250
 ShowWindow IDM_MONITOR_WINDOW SW_HIDE
-MoveWindow IDM_PARAM_WINDOW -304 1682 283 383
+MoveWindow IDM_PARAM_WINDOW -898 1608 283 383
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_PERF_WINDOW 0 0 304 284
+MoveWindow IDM_PERF_WINDOW -689 1111 304 284
 ShowWindow IDM_PERF_WINDOW SW_HIDE
-MoveWindow IDM_SIG_DESIGNER -933 1514 540 440
-ShowWindow IDM_SIG_DESIGNER SW_HIDE
+MoveWindow IDM_SIG_DESIGNER -933 1514 550 450
+ShowWindow IDM_SIG_DESIGNER SW_SHOWNORMAL
