--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,18 +1,18 @@
-MoveWindow IDM_APPL_WINDOW -1859 1184 1436 909
+MoveWindow IDM_APPL_WINDOW -1859 1184 1438 911
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_CRSR_WINDOW -416 1452 304 229
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MINI_WINDOW -329 1093 354 354
+MoveWindow IDM_MINI_WINDOW -329 1093 356 356
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MAIN_WINDOW -1851 1236 1423 830
+MoveWindow IDM_MAIN_WINDOW -1851 1236 1425 832
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_DESC_WINDOW -358 1708 354 354
+MoveWindow IDM_DESC_WINDOW -358 1708 356 356
 ShowWindow IDM_DESC_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MONITOR_WINDOW 200 0 189 254
+MoveWindow IDM_MONITOR_WINDOW 200 0 191 256
 ShowWindow IDM_MONITOR_WINDOW SW_HIDE
-MoveWindow IDM_PARAM_WINDOW -898 1608 283 383
+MoveWindow IDM_PARAM_WINDOW -826 1483 283 383
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_PERF_WINDOW -689 1111 304 284
 ShowWindow IDM_PERF_WINDOW SW_HIDE
-MoveWindow IDM_SIG_DESIGNER -1168 1227 555 827
-ShowWindow IDM_SIG_DESIGNER SW_SHOWNORMAL
+MoveWindow IDM_SIG_DESIGNER -1168 1227 559 830
+ShowWindow IDM_SIG_DESIGNER SW_HIDE
