--- a/Toolbox/runtimeCPP/runtimeCPP.vcxproj.filters
+++ b/Toolbox/runtimeCPP/runtimeCPP.vcxproj.filters
@@ -57,5 +57,11 @@
     <ClCompile Include="WrapBase.ixx">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="Preferences.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="Preferences.ixx">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
