cleanup, work on Preferences

--- a/Toolbox/Utilities/Utilities.vcxproj
+++ b/Toolbox/Utilities/Utilities.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="AutoOpen.ixx" />
     <ClCompile Include="BasePeak.ixx" />
     <ClCompile Include="BasicTypes.cpp" />
     <ClCompile Include="BasicTypes.ixx" />
